--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,8 +11,9 @@ environment:
   - configuration: Release
 
 # Operating system (build VM template)
-
-os: Visual Studio 2015
+image:
+  - Visual Studio 2015
+  - Visual Studio 2017
 
 cache:
   - C:\libs\%POSTGIS_FILE%.zip -> appveyor.yml
