Command line option "-V" to include library versions

--- a/cmake/config.h.in
+++ b/cmake/config.h.in
@@ -1,5 +1,6 @@
 #cmakedefine HAVE_LSEEK64 1
 #cmakedefine HAVE_LUA 1
+#cmakedefine HAVE_LUAJIT 1
 #cmakedefine HAVE_POSIX_FADVISE 1
 #cmakedefine HAVE_POSIX_FALLOCATE 1
 #cmakedefine HAVE_SYNC_FILE_RANGE 1
